--- a/app/assets/stylesheets/main/new.css
+++ b/app/assets/stylesheets/main/new.css
@@ -1,4 +1,4 @@
-.items-sell-contents {
+.mains-sell-contents {
   background-color: #f5f5f5;
   font-family: "Source Sans Pro", Helvetica, Arial, "æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“", "YuGothic", "ãƒ¡ã‚¤ãƒªã‚ª", "Meiryo", sans-serif;
   font-size: 14px;
@@ -8,14 +8,14 @@
   min-width: 500px;
 }
 
-.items-sell-main {
+.mains-sell-main {
   background-color: #FFF;
   width: 70vw;
   min-width: 450px;
   padding: 10vh 15vw;
 }
 
-.items-sell-title {
+.mains-sell-title {
   font-size: 22px;
   font-weight: bold;
   text-align: center;
@@ -39,19 +39,18 @@
 
 /* 投稿画像 */
 .img-upload {
-  display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 2vh 0;
 }
 
-.items-detail {
+.mains-detail {
   display: flex;
   justify-content: space-between;
   padding: 2vh 0;
 }
 
-.items-detail>.form {
+.mains-detail>.form {
   width: 300px;
   padding: 2vh 0;
 }
