--- a/app/views/mains/new.html.erb
+++ b/app/views/mains/new.html.erb
@@ -38,9 +38,9 @@
 
     <%#投稿する内容の入力%>
     <main>
-    <div class="items-sell-contents">
-      <div class="items-sell-main">
-      <h2 class="items-sell-title">商品の情報を入力</h2>
+    <div class="mains-sell-contents">
+      <div class="mains-sell-main">
+      <h2 class="mains-sell-title">あなたのお気に入りの場所を投稿</h2>
 
       <%= form_with model: @main, local: true do |f| %>
       <%# render 'shared/error_messages', model: f.object %>
@@ -50,67 +50,34 @@
             出品画像
           <span class="indispensable">必須</span>
           </div>
-          <div class="click-upload">
             <p>クリックしてファイルをアップロード</p>
             <%# image_tag place.image, id: 'item-image' if place.image.attached? %>
-            <%= f.file_field :image, id:"item-image" %>
-          </div>
+            <%= f.file_field :image %>
         </div>
-    <%# 商品名と商品説明 %>
-        <div class="new-items">
-          <div class="weight-bold-text">
-            場所名
-            <span class="indispensable">必須</span>
-          </div>
-          <%= f.text_area :name, class:"items-text", id:"item-name", placeholder:"商品名（必須 40文字まで)", maxlength:"40" %>
-          <div class="items-explain">
-            <div class="weight-bold-text">
-              場所の説明
-              <span class="indispensable">必須</span>
-            </div>
-            <%= f.text_area :info, class:"items-text", id:"item-info", placeholder:"商品の説明（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" ,maxlength:"1000" %>
-          </div>
+    <%# 場所と場所の詳細 %>
+        <div class="weight-bold-text">
+          場所名
+          <span class="indispensable">必須</span>
         </div>
-    
+
+        <%= f.text_area :name, class:"single-input-primary", id:"item-name", placeholder:"場所名（必須 40文字まで)", maxlength:"40" %>
+
+        <div class="weight-bold-text">
+          場所の説明
+          <span class="indispensable">必須</span>
+        </div>
+
+        <%= f.text_area :info, class:"single-input-primary", id:"item-info", placeholder:"投稿する場所について書いてみよう。" ,rows:"7" ,maxlength:"1000" %>
+
     <%# 下部ボタン %>
         <div class="sell-btn-contents">
           <%= f.submit "投稿する" ,class:"sell-btn" %>
           <%=link_to 'もどる', root_path, class:"back-btn" %>
         </div>
+        
       <% end %>
       </div>
     </div>
-<%##############################################################%>
-      <%#div class="input-group-icon mt-10">
-        <div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-        <div class="form-select" id="default-select">
-          <select>
-            <option value="1">City</option>
-            <option value="1">Dhaka</option>
-            <option value="1">Dilli</option>
-            <option value="1">Newyork</option>
-            <option value="1">Islamabad</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="input-group-icon mt-10">
-        <div class="icon"><i class="fa fa-globe" aria-hidden="true"></i></div>
-        <div class="form-select" id="default-select">
-          <select>
-            <option value="1">Country</option>
-            <option value="1">Bangladesh</option>
-            <option value="1">India</option>
-            <option value="1">England</option>
-            <option value="1">Srilanka</option>
-          </select>
-        </div>
-      </div>
-
-      <div class="mt-10">
-        <textarea class="single-textarea" placeholder="Message" onfocus="this.placeholder = ''"
-        onblur="this.placeholder = 'Message'" required></textarea>
-      </div%>
     </main>
 
     <!-- JS here -->
