--- a/app/views/mains/new.html.erb
+++ b/app/views/mains/new.html.erb
@@ -38,46 +38,46 @@
 
     <%#投稿する内容の入力%>
     <main>
-    <div class="mains-sell-contents">
-      <div class="mains-sell-main">
-      <h2 class="mains-sell-title">あなたのお気に入りの場所を投稿</h2>
-
-      <%= form_with model: @main, local: true do |f| %>
-      <%# render 'shared/error_messages', model: f.object %>
-    <%# 投稿画像 %>
-        <div class="img-upload">
-          <div class="weight-bold-text">
-            出品画像
-          <span class="indispensable">必須</span>
+      <div class="mains-sell-contents">
+        <div class="mains-sell-main">
+        <h1 class="mains-sell-title">お気に入りの場所を投稿</h1>
+  
+        <%= form_with model: @main, local: true do |f| %>
+        <%= render 'shared/error_messages', model: f.object %>
+      <%# 投稿画像 %>
+          <div class="img-upload">
+            <div class="weight-bold-text">
+              出品画像
+            <span class="indispensable">必須</span>
+            </div>
+            <div class="click-upload">
+              クリックしてファイルをアップロード
+            </div>
+              <%= f.file_field :image %>
           </div>
-            <p>クリックしてファイルをアップロード</p>
-            <%# image_tag place.image, id: 'item-image' if place.image.attached? %>
-            <%= f.file_field :image %>
+      <%# 場所と場所の詳細 %>
+          <div class="weight-bold-text">
+            場所名
+            <span class="indispensable">必須</span>
+          </div>
+  
+          <%= f.text_area :name, class:"single-input-primary", id:"item-name", placeholder:"場所の名前（必須 20文字まで)", maxlength:"20" %>
+  
+          <div class="weight-bold-text">
+            場所の説明
+            <span class="indispensable">必須</span>
+          </div>
+  
+          <%= f.text_area :info, class:"single-input-primary", id:"item-info", placeholder:"どんな場面なのか詳細を書いてみよう。" ,rows:"7" ,maxlength:"1000" %>
+  
+      <%# 下部ボタン %>
+          <div class="sell-btn-contents">
+            <%= f.submit "投稿する" ,class:"sell-btn" %>
+            <%=link_to 'もどる', root_path, class:"back-btn" %>
+          </div>
+        <% end %>
         </div>
-    <%# 場所と場所の詳細 %>
-        <div class="weight-bold-text">
-          場所名
-          <span class="indispensable">必須</span>
-        </div>
-
-        <%= f.text_area :name, class:"single-input-primary", id:"item-name", placeholder:"場所名（必須 40文字まで)", maxlength:"40" %>
-
-        <div class="weight-bold-text">
-          場所の説明
-          <span class="indispensable">必須</span>
-        </div>
-
-        <%= f.text_area :info, class:"single-input-primary", id:"item-info", placeholder:"投稿する場所について書いてみよう。" ,rows:"7" ,maxlength:"1000" %>
-
-    <%# 下部ボタン %>
-        <div class="sell-btn-contents">
-          <%= f.submit "投稿する" ,class:"sell-btn" %>
-          <%=link_to 'もどる', root_path, class:"back-btn" %>
-        </div>
-        
-      <% end %>
       </div>
-    </div>
     </main>
 
     <!-- JS here -->
