画面設計〜実装

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -81,7 +81,6 @@
        </div>
         <!-- Header End -->
     </header>
-
     <main>
       <!-- Hero Area Start-->
         <div class="slider-area hero-overly">
@@ -100,37 +99,44 @@
             </div>
         </div>
         <!--Hero Area End-->
-<!-------------------------------------------------------------------------------------------------------------------------------------------------------->
-        <div class="page-content-item">
-          <ul>
-            <% if @pages.length != 0 %>
-              <% @pages.each do |page| %>
-                <%= link_to page_path(page) do %>
-                <li class='list'>
-                    <%= image_tag page.image.variant(resize: '30x30'), class: 'page-image' if page.image.attached? %>
-                    <div class='page-text'>
-                      <h3 class='page-name'><%= page.name %></h3>
-                      <div class='page-info'><%= page.info %></div>
-                    </div>
-                </li>
-                <% end %>
-              <% end %>
-            <% else %>
-                <%= link_to '#' do %>
-                <li class='list'>
-                    <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "page-image" %>
-                    <div class='page-text'>
-                      <h3 class='page-name'>投稿してね！</h3>
-                    </div>
-                </li>
-                <% end %>
-            <% end %>
-          </ul>
-        </div>
-<!------------------------------------------------------------------------------------------------------------------------------------------------------------->
-    </main>
 
-     <footer>
+      <div class="page-show">
+        <div class="page-box">
+          <h2 class="name">
+            <%= @main.name %>
+          </h2>
+          <div class='page-img-content'>
+            <%= image_tag @main.image ,class:"page-box-img" %>
+          </div>
+      
+          <div class="page-explain-box">
+            <span><%= @main.info %></span>
+          </div>
+          <table class="detail-table">
+            <tbody>
+              <tr>
+                <th class="detail-page">カテゴリー</th>
+                <td class="detail-value"><%= @detail.category.name %></td>
+              </tr>
+              <tr>
+                <th class="detail-page">国名</th>
+                <td class="detail-value"><%= @detail.country.name %></td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="option">
+            <div class="favorite-btn">
+              <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
+              <span>お気に入り 0</span>
+            </div>
+            <div class="report-btn">
+              <%= image_tag "flag.png" ,class:"report-flag-icon" ,width:"20",height:"20"%>
+              <span>不適切な商品の通報</span>
+            </div>
+          </div>
+        </div>
+      </main>
+      <footer>
         <!-- Footer Start-->
         <div class="footer-area">
             <div class="container">
